<resources>
    <string name="app_name" translatable="false">xmohit</string>
    <string name="user_registration">User Registration</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="signup">Signup</string>
    <string name="already_registered_signin_here">Already Registered? Signin Here</string>
    <string name="logout">Logout</string>
    <string name="user_login">User Login</string>
    <string name="enter_your_email">Enter email</string>
    <string name="enter_your_password">Enter password</string>
    <string name="signup_">Sign In</string>
    <string name="not_have_an_account_signup_here">Not have an account? Signup Here</string>
    <string name="recover_password">Recover Password</string>
    <string name="hashing">hashing</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="home">HOME</string>
    <string name="upload">UPLOAD</string>
    <string name="myupload">myupload</string>
    <string name="my_upload">MY UPLOAD</string>
    <string name="go_to_dashboard">GO TO DASHBOARD</string>
    <string name="title_activity_tabbed">tabbed</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment1">Hello blank fragment1</string>
    <string name="hello_blank_fragment">Hello blank fragment3</string>
    <string name="upload_section">upload section</string>
    <string name="upload_image_from_gallery">Upload Image From Gallery</string>
    <string name="click">Click here to upload images</string>
    <string name="kutta">kutta</string>
    <string name="browse_from_gallery">Browse From Gallery</string>
    <string name="image3">Image Name</string>
    <string name="upload_image">upload image</string>
    <string name="browse_from_camera">Browse From Camera</string>
    <string name="show_my_uploads">Show My Uploads</string>
    <string name="image_name">Image name</string>
    <string name="log_out">Log Out</string>
    <string name="description">Description</string>
    <string name="description1">Description</string>
    <string name="hello">Hello Brank Fragment4</string>
</resources>
